fixed img sizing and spacing on post grid on profile

--- a/CSS-frameworks-CA/src/scss/_layout.scss
+++ b/CSS-frameworks-CA/src/scss/_layout.scss
@@ -330,9 +330,10 @@ label {
 
   img {
     width: 100%;
-    aspect-ratio: 1 / 1;
+    max-width: 600px;
+    max-height:1000px;
+    aspect-ratio: 3 / 4;
     object-fit: cover;
-    border-radius: 1rem;
     box-shadow: 0 4px 12px rgba(190, 4, 109, 0.15);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 
